# esekeyd

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  circle.yml  config.h.in  configure  configure.ac
.circleci/: config.yml
.github/workflows/: main.yml
debian/: Makefile.am  changelog  control  copyright  dirs  esekeyd.default  files  init.d  rules
doc/: Makefile.am  esekeyd.1  keytest.1  learnkeys.1
examples/: Makefile.am  Makefile.in  example.conf
lib/: Makefile.am
old/: Makefile.am  Makefile.in  README  esekeyd.c  funkey.sh
src/: Makefile.am  Makefile.in  esekey.h  esekeyd.c  input.c  keytest.c  learnkeys.c  mkparser.c  parser.c
trunk/: Makefile.am  NEWS  configure.ac
trunk/doc/: esekeyd.1  keytest.1  learnkeys.1
trunk/examples/: esekeyd.gentoo
trunk/src/: input.c  learnkeys.c
